--- a/static/css/tryrkt.css
+++ b/static/css/tryrkt.css
@@ -34,8 +34,7 @@ body {
   color: #fff;
   height:40px;
   font-size: 40;
-  padding-top: 15px
-  padding-left: 200px;
+  padding-top: 15px;
 }
 
 
@@ -55,7 +54,13 @@ body {
 }
 
 #examples{
-  text-align: right;
+  text-align: center;
+}
+
+#select-wrapper{
+  text-align: left;
+  height: 125px;
+  overflow: auto;
 }
 
 #btn_submit { 
@@ -219,4 +224,79 @@ div.continue {
   color: #333333;
 }
 
+#main_nav {
+  text-align: center;
+  background: #fff;
+  width: 710px;
+  padding-left: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 990;
+}
 
+  #main_nav ul {
+    background: #eee;
+    float: left;
+    position: relative;
+    height:40px;
+    top: 5px;
+    z-index: 990;
+  }
+  
+  #main_nav li {
+    float: left;
+    position: relative;
+    top: 10px;
+    width: 160px;
+    list-style: none;
+    z-index: 991;
+  }
+  
+  #main_nav > ul > li > a, h1 {
+    text-transform: uppercase;
+    z-index: 990;
+  }
+  
+  #main_nav a {
+    display: block;
+    text-decoration: none;
+    padding: 5px 5px;
+    color: #000;
+    z-index: 990;
+  }
+
+  #main_nav ul ul {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 991;
+  }
+  
+  #main_nav ul ul ul {
+    left: 100%;
+    top: 0;
+    z-index: 993;
+  }
+  
+  #main_nav li:hover, #main_nav li:hover li {
+    background: #ddd;
+    z-index: 990;
+  }
+  
+  #main_nav li li:hover, #main_nav li li:hover li {
+    background: #bbb;
+    z-index: 998;
+  }
+  
+  #main_nav li li li:hover {
+    background: #999;
+    z-index: 999;
+  }
+  
+  #main_nav li:hover > ul {
+    visibility: visible;
+    opacity: 1;
+    z-index: 990;
+  }
