disable Test button for now

--- a/templates/home.html
+++ b/templates/home.html
@@ -212,7 +212,7 @@
       <div id="changer">
           <button id="btn_submit" autofocus="autofocus" type="button" onclick="copy();check()">Verify</button>
           <button id="btn_run" type="button" onclick="copy();run()">Run</button>
-          <button id="btn_test" type="button" onclick="copy();test()">Test</button>
+          <!-- <button id="btn_test" type="button" onclick="copy();test()">Test</button> -->
           <span class="bottom">Enter a program above to verify.</span>
           <div id="changer_result" class="jquery-console-message"></div>
       </div>
