update homepage not to mention `Test` button

--- a/templates/home.html
+++ b/templates/home.html
@@ -220,8 +220,8 @@
         <p> 
           To try the tool, enter a program above and press <code>Verify</code>
           to run the verification, or <code>Run</code> to run it as a regular Racket program.
-          The <code>Test</code> button uses random testing to attempt to find a counterexample, 
-          and is useful as a comparison the the verification tool.
+          <!-- The <code>Test</code> button uses random testing to attempt to find a counterexample, 
+          and is useful as a comparison the the verification tool. -->
           Select an example program from the menu at the top to load it.
           We currently support a small functional subset of Racket:
         </p>
