--- a/templates/home.html
+++ b/templates/home.html
@@ -99,7 +99,7 @@
             <li>
               <a href="javascript:void(0)">Games</a>
               <ul>
-                <li><a onclick = loadExample("safe_tetris"); href="">Tetris</a></li>
+                <li><a onclick = loadExample("safe_tetris"); href="javascript:void(0)">Tetris</a></li>
                 <li><a onclick = loadExample("safe_snake"); href="javascript:void(0)">Snake</a></li>
               </ul>
             </li>
